--- a/Develop/style.css
+++ b/Develop/style.css
@@ -10,7 +10,7 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  
 }
 
 .jumbotron {
@@ -33,13 +33,15 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  margin: auto;
+  padding: auto;
 }
 
 .past {
@@ -58,14 +60,19 @@ textarea{
 }
 
 .saveBtn {
+  height: 70px;
+  width: 70px;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+    margin: auto;
+  padding: auto;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
